# measure-for-ict

./: .gitignore  CMakeLists.txt
include/: measure_log.h  measure_timer.h  parser.h
measure_log/: statistics_log_RECV.txt  statistics_log_SEND.txt
src/: CMakeLists.txt  main.c  measure_log.c  measure_timer.c  parser.c
